--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -60,7 +60,7 @@
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100%;
   height: 100%;
   color: var(--color-text);
   background: var(--color-background);
